# easy-reading

./: index.html  package-lock.json  package.json  tsconfig.json
src/: App.tsx  BunpitsuReader.jsx  styles.css
src-tauri/: Cargo.toml  Untitled-1.ini  tauri.conf.json
src-tauri/src/: bunsetsu_handler.rs  main.rs  tauri-rust-lindera.rs
